--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ body {
     color: var(--grey);
 }
 
-h1 {
+h1, h2 {
     font-family: "San Francisco", sans-serif;
     font-weight: 800;
     font-size: 52px;
