--- a/demo/demo.css
+++ b/demo/demo.css
@@ -36,6 +36,18 @@
     src: url("./font/SF-Pro-Display-Heavy.otf") format("opentype");
     font-weight: 800;
 }
+* {
+    box-sizing: border-box;
+}
+
+body {
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #2C2A32;
+}
 
 h1, h2 {
     font-family: "San Francisco", sans-serif;
@@ -55,11 +67,21 @@ p {
     margin: 16px 0;
 }
 
-.img {
+.card {
     
-
+    width: 50%;
+    height: 60vh;
+    border-radius: 16px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 #vr {
     display: flex;
